--- a/css/style.css
+++ b/css/style.css
@@ -218,13 +218,17 @@ nav ul li a {
 }
 
 .logo {
+  display: flex;
+  align-items: center;
   float: left;
-}
-
-.logo img {
   width: 100px;
   height: 50px;
 }
+
+/* .logo img {
+  width: 100px;
+  height: 50px;
+} */
 
 .responsive {
   display: none;
@@ -391,43 +395,39 @@ nav ul li a {
 /*  Portfolio
 /*-----------------------------------------------------------------------------------*/
 .ruby {
-  margin-left: 200px;
   height: 50px;
 }
 
 .rails {
-  width: 85px;
+  height: 50px;
 }
 
 .react {
-  width: 50px;
+  height: 50px;
 }
 
 .redux {
-  width: 85px;
+  height: 55px;
 }
 
 .javascript {
-  width: 60px;
+  height: 60px;
 }
 
 .css {
-  width: 42px;
+  height: 60px;
 }
 
 .html {
-  margin-left: 7px;
-  width: 42px;
+  height: 60px;
 }
 
 .node {
-  margin-left: 15px;
-  width: 75px;
+  height: 60px;
 }
 
 .sql {
-  margin-left: 15px;
-  width: 50px;
+  height: 60px;
 }
 
 #portfolio {
@@ -476,6 +476,16 @@ nav ul li a {
   margin-bottom: 50px;
   width: 100%;
 }
+
+#itype, #heat, #huddleup {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+#huddleup {
+  height: 290px;
+}
+
 
 .portfolio-thumbnail {
   margin-bottom: 30px;
@@ -579,14 +589,24 @@ nav ul li a {
   line-height: 24px;
 }
 
+
+.skills-container {
+  display: flex;
+  justify-content: space-between;
+}
 /*-----------------------------------------------------------------------------------*/
 /*  Contact
 /*-----------------------------------------------------------------------------------*/
 
 #contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: auto;
   width: 100%;
 }
+
+
 
 .contact-details {
   list-style: none;
@@ -635,6 +655,24 @@ nav ul li a {
   font-size: 13px;
 }
 
+.contact-row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact-contact {
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.contact-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
 /*-----------------------------------------------------------------------------------*/
 /*  Footer
 /*-----------------------------------------------------------------------------------*/
@@ -662,7 +700,7 @@ nav ul li a {
 }
 
 #footer .socials-media ul li a {
-  font-size: 24px;
+  font-size: 64px;
   color: #999;
   letter-spacing: 0.1em;
   font-weight: 500;
