--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../images/home-bg.jpg") repeat scroll center center / cover;
+  background: url("../images/home-bg6.jpg") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
@@ -264,6 +264,7 @@ nav ul li a {
   font-weight: 700;
   margin-bottom: 10px;
   text-transform: uppercase;
+  /* color: #b8a07e; */
   color: #fff;
 }
 
@@ -275,6 +276,7 @@ nav ul li a {
   text-transform: capitalize;
   color: #fff;
   font-weight: 500;
+  /* color: #b8a07e */
 }
 
 .header-content .list-social li {
@@ -283,6 +285,7 @@ nav ul li a {
 }
 
 .header-content .list-social li i {
+  /* color: #b8a07e; */
   color: #fff;
   font-size: 40px;
   -moz-transition: all 0.5s ease-in-out 0s;
@@ -293,6 +296,7 @@ nav ul li a {
 }
 
 .header-content .list-social li i:hover {
+  /* color: #fff; */
   color: #b8a07e;
   font-size: 40px;
 }
