--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../images/home-bg5.jpg") repeat scroll center center / cover;
+  background: url("../images/home-bg6.jpg") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
@@ -264,7 +264,7 @@ nav ul li a {
   font-weight: 700;
   margin-bottom: 10px;
   text-transform: uppercase;
-  /* color: #b8a07e; */
+  text-shadow: 2px 2px 4px #000000;
   color: #fff;
 }
 
@@ -272,11 +272,11 @@ nav ul li a {
   font-size: 13px;
   letter-spacing: 5px;
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: -16px;
   text-transform: capitalize;
   color: #fff;
   font-weight: 500;
-
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .header-content .list-social li {
