--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../images/home-bg6.jpg") repeat scroll center center / cover;
+  background: url("../images/home-bg3.jpg") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
@@ -264,19 +264,17 @@ nav ul li a {
   font-weight: 700;
   margin-bottom: 10px;
   text-transform: uppercase;
-  text-shadow: 2px 2px 4px #000000;
   color: #fff;
 }
 
 .header-content p {
-  font-size: 13px;
-  letter-spacing: 5px;
-  margin-top: 0;
-  margin-bottom: -16px;
-  text-transform: capitalize;
-  color: #fff;
-  font-weight: 500;
-  text-shadow: 2px 2px 4px #000000;
+    font-size: 13px;
+    letter-spacing: 5px;
+    margin-top: 0;
+    margin-bottom: -8px;
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: 500;
 }
 
 .header-content .list-social li {
